# nth-team-layer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_GUIDE.md  LICENSE  MANIFEST.in  MANIFESTO.md  README.md  SECURITY.md  VISION.md  pyproject.toml
.github/workflows/: publish.yml
blackboard/: .gitignore
docs/: CATEGORIES.md  CONFORMANCE.md  DESIGN_TRADE_OFFS.md  MIGRATIONS.md  PROTOCOLS.md
docs/architecture/: NTH_DAO_ROADMAP_2026_2028.md
docs/research/: A2A_ALIGNMENT.md  AGENT_COLLABORATION_2026.md
examples/: blackboard_demo.py  evo_demo.py  group_chat_server.py  integration_demo.py  multi_backend_demo.py  nth_demo.py  nth_telegram_bot.py  real_world_demo.py  sync_demo.py  team_entrypoint.py  template_demo.py  web_dashboard.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: run-build.ps1  run-vitest.ps1
frontend/src/: App.test.tsx  App.tsx  api.ts  consoleAuth.test.ts  consoleAuth.ts  contacts.test.ts  contacts.ts  crypto.ts  styles.css  types.ts
frontend/src/components/: IconNav.tsx  Panels.tsx  SidebarChat.tsx  SidebarPeople.tsx  Topbar.tsx  utils.ts
frontend/src/panels/: ContactsPanel.r16.test.tsx  ContactsPanel.r3.test.tsx  ContactsPanel.test.tsx  ContactsPanel.tsx  GovernancePanel.tsx  GroupsPanel.tsx  MandatesPanel.test.tsx  MandatesPanel.tsx  NearbyPanel.tsx  README.md  chat-panels.css  index.tsx  panel-theme.css  qq-style.css
nth_dao/: INTEGRATION_GUIDE.md  __init__.py  a2a_card.py  a2a_mission_bridge.py  a2a_rpc.py  achievement.py  action_routing.py  agent_card.py  agent_code.py  agent_daemon.py  agent_ledger.py  agent_profile.py  attach.py  b64u.py  canonical_json.py  cap_token.py  channel.py  contact_book.py  demo_responder.py  did_key.py  event_bus.py  event_subscriptions.py  execution_receipt.py  fault_isolation.py  gossip.py  group_registry.py  groups.py  guardian.py  identity.py  invitation.py  key_recovery.py  local_tool_orchestrator.py  marketplace.py  membership.py  pyproject.toml  reputation.py  web_of_trust.py
nth_dao/a2a/: __init__.py  agent_card.py  server.py  translate.py
nth_dao/cli/: __init__.py  metrics.py  status.py
nth_dao/conformance/: __init__.py  _gen_mandate_vectors.py  external_vc.py  regenerate.py  runner.py  vectors.json
nth_dao/discovery/: __init__.py  agent_registry.py  lan.py  lan_mdns.py  peer_finder.py
nth_dao/mandate/: __init__.py  _data_integrity.py  cart.py  events.py  intent.py  payment.py  store.py
nth_dao/orchestration/: __init__.py  mission.py  mission_runner.py  mission_store.py  review.py  template.py
nth_dao/util/: __init__.py  io.py  jsonl_safe.py  time_utils.py
nth_dao/web/: __init__.py  rate_limit.py
nth_dao/web/static/: index.html
nth_dao/web/static/assets/: index-B2mvzrGW.js  index-BBXLILKM.css  index-BKTv1dGI.css  index-BhgkX2Cp.js  index-BsZwvcFv.css  index-C2KCkjJC.css  index-CTIoWZOr.js  index-CYL6uQGm.js  index-Cz5L82CU.css  index-DO4kFWmG.js  index-DbmSIT3l.js  index-DkcL74zg.css  index-Dn511-MQ.css  index-DpiUFdlq.css  index-DutXVJS6.js  index-PyxeoEpy.js  index-TZXWrNzI.css  index-YCDEt9Jc.css  index-eSk0RrfJ.js  index-fE43MP1l.js  index-pv1iZDdi.js  index-uRRtSEVP.js
nth_team_layer/: INTEGRATION_GUIDE.md  __init__.py  attach.py  channel.py  gossip.py  groups.py  identity.py  marketplace.py  membership.py  pyproject.toml  reputation.py
nth_team_layer/discovery/: __init__.py  agent_registry.py  peer_finder.py
nth_team_layer/orchestration/: __init__.py  mission.py  mission_runner.py  mission_store.py
requirements/: README.md  base.txt  crypto.lock.txt  dev.lock.txt  ux.lock.txt  web.lock.txt
sidechain/: .gitignore
skills/: TEAM-SOUL.md
skills/registry/: example_skill.md
team_layer/: __init__.py  runtime.py
team_layer/backends/: __init__.py  base.py  claude_code.py  codex.py  hermes.py  mock.py  openclaw.py  openhands.py  registry.py
team_layer/blackboard/: .gitignore  __init__.py  __main__.py  blackboard.py  cli.py  provider.py  scope.py  views.py
team_layer/compression/: __init__.py  pipeline.py
team_layer/evolution/: __init__.py  gate.py  orchestrator.py  reflector.py  trigger.py  verifier.py
team_layer/git_sync/: __init__.py  aggregator.py  config.py  log_collector.py  skill_loader.py
team_layer/memory_providers/: __init__.py  ledger_provider.py  soul_provider.py  user_model_provider.py  vector_provider.py
tests/: conftest.py  test_a2a_agent_card.py  test_a2a_mission_bridge.py  test_a2a_rpc.py  test_action_routing.py  test_agent_capacity.py  test_agent_card.py  test_agent_daemon_security.py  test_agent_discovery.py  test_architect_c1_search_auth.py  test_architect_c2_workspace_local_honest.py  test_architect_h1_daemon_prompt_budget.py  test_architect_h2_h3_a2a_translate.py  test_architect_m2_wildcard_rejected.py  test_architect_m3_agent_card_id_field.py  test_architect_m4_marketplace_keyerror.py  test_architect_r13_by_code_auth.py  test_architect_r1_r2_security_sprint.py  test_architect_r23_workspace_safety.py  test_architect_r25_r26_lan_discovery.py  test_architect_r35_unique_code_per_install.py  test_architect_r46_r50_r52_code_robustness.py  test_architect_r4_search_cache.py  test_architect_r5_lan_discover_auth.py  test_architect_r6_r7_a2a_merge.py  test_architect_r9_r14_trim_iterative.py  test_b64u.py  test_bot_handlers.py  test_cap_token.py  test_cli_status_metrics.py  test_concurrent_claim.py  test_conformance.py  test_console_token_auth.py  test_contact_book.py  test_correction_events.py  test_did_bootstrap.py  test_did_key.py  test_did_persistence_across_restart.py  test_event_subscriptions.py  test_execution_receipt.py  (+81 more)
tests/migration_fixtures/0.9.0/: mission.json
