[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nth-dao"
version = "0.8.1"
description = "AI-native Web3 DAO layer for humans and agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AlexNthLab" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "agent", "multi-agent", "dao", "web3", "ai", "claude", "hermes",
    "blackboard", "mission", "evolution", "identity", "a2a",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    # License classifier removed; modern SPDX `license` field replaces it (PEP 639)
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Zero third-party deps for core functionality.
# All NTH DAO core functionality uses only Python stdlib.
dependencies = []

[project.optional-dependencies]
# Optional extensions:
dev = ["pytest>=7.0", "ruff>=0.1.0", "mypy>=1.0"]
contracts = ["pydantic>=2.0"]    # stricter EvoLoop contract validation
retries = ["tenacity>=8.0"]      # better retry primitives in generated skills
crypto = ["pynacl>=1.5"]         # optional Ed25519 agent identity/signing

# Backend-specific (only install what you use):
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
google = ["google-generativeai>=0.3.0"]
hermes = []  # via subprocess; install hermes-agent separately
web = ["fastapi>=0.100", "uvicorn>=0.20"]  # web_dashboard.py

[project.urls]
Homepage = "https://github.com/AlexNthLab/nth-dao"
Documentation = "https://github.com/AlexNthLab/nth-dao#readme"
Issues = "https://github.com/AlexNthLab/nth-dao/issues"
Changelog = "https://github.com/AlexNthLab/nth-dao/blob/main/CHANGELOG.md"

[project.scripts]
nth-blackboard = "team_layer.blackboard.cli:main"

[tool.setuptools]
packages = [
    "nth_dao",
    "nth_dao.discovery",
    "nth_dao.orchestration",
    "team_layer",
    "team_layer.memory_providers",
    "team_layer.compression",
    "team_layer.evolution",
    "team_layer.git_sync",
    "team_layer.blackboard",
    "team_layer.backends",
]

# Optional package data: include INTEGRATION_GUIDE inside nth_dao/
[tool.setuptools.package-data]
"nth_dao" = ["INTEGRATION_GUIDE.md", "*.toml"]

[tool.setuptools.exclude-package-data]
"*" = [".gitignore", ".gitkeep", "__pycache__/*", "*.pyc"]
