[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Note: This pyproject.toml ships inside nth_dao/ for historical
# extraction notes. The forward package name is now nth-dao.
#
# Currently nth_dao lives alongside team_layer/ within the
# Hermes fork. To extract:
#   1. mkdir nth-dao-repo && cd nth-dao-repo
#   2. cp -r ../hermes-team-agent/team_layer ../hermes-team-agent/nth_dao ./
#   3. mv nth_dao/pyproject.toml ./pyproject.toml
#   4. git init && git add . && git commit -m "extract nth-dao"
#   5. pip install -e . (test)
#   6. twine upload dist/* (PyPI release)

[project]
name = "nth-dao"
version = "0.8.1"
description = "AI-native Web3 DAO layer for humans and agents"
readme = "../README.md"
requires-python = ">=3.10"
authors = [{ name = "NTH DAO Project" }]
license = { text = "MIT" }
keywords = ["agent", "multi-agent", "dao", "web3", "ai", "blackboard", "mission"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

# Zero third-party deps for core functionality.
# All NTH DAO core functionality uses only Python stdlib.
dependencies = []

[project.optional-dependencies]
# Optional helpers when integrating with specific backends:
dev = ["pytest>=7.0", "ruff>=0.1.0"]
contracts = ["pydantic>=2.0"]  # stricter EvoLoop contract validation
retries = ["tenacity>=8.0"]    # better retry primitives in generated skills
crypto = ["pynacl>=1.5"]       # optional Ed25519 agent identity/signing

[project.urls]
Homepage = "https://github.com/AlexNthLab/nth-dao"
Source = "https://github.com/AlexNthLab/nth-dao"

[project.scripts]
nth-blackboard = "team_layer.blackboard.cli:main"

[tool.setuptools]
packages = ["nth_dao", "nth_dao", "team_layer"]
